Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51405

QCameraViewfinder does not draw correctly with partially overlapping MDI subwindows

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.4, 5.10.1
    • 5.6
    • None
    • Tested on Windows 10 running on Dell Desktop with NVIDIA graphics card. USB camera.
      Tested on MacOS 10.11.3, 27" retina iMac.

      The attached project illustrates a simple MDI window application with two subwindows. One subwindow is blank and the other has a QCameraViewfinder displaying live video from the USB camera. To observe the problem drag the empty subwindow for partial overlap over the video window.

      This works correctly on the Mac, i.e., the live video continues to draw correctly behind the front occluding window. On Windows there are only traces of video at the edges of the viewfinder.

        1. MdiCamera.zip
          3 kB
          Nomen
        2. after.PNG
          30 kB
          Nomen
        3. before.PNG
          106 kB
          Nomen
        For Gerrit Dashboard: QTBUG-51405
        # Subject Branch Project Status CR V

            valentyn.doroshchuk Valentyn Doroshchuk
            nomen Nomen
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes